--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+   <div class="1"><h1 class="git">login in the git hub</h1></div>
+   <p>grand father folder</p>
+   <p>in my pc </p>
+</body>
+</html>
