--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
    <div class="1"><h1 class="git">login in the git hub</h1></div>
-   <p>grand father folder</p><br>
+   <p>grand father folder</p>
    <p>in my pc </p>
+   <h1 >element are either shown in the</h1>
 </body>
 </html>
