--- a/index.html
+++ b/index.html
@@ -2,14 +2,130 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ashir Fragrance - Premium Perfume Shop</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #e6f2ff 0%, #ffffff 100%);
+            color: #333;
+        }
+        header {
+            background-color: #b3d9ff;
+            padding: 20px 0;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .logo {
+            font-size: 32px;
+            font-weight: bold;
+            color: #004d99;
+        }
+        .tagline {
+            color: #0066cc;
+            font-size: 14px;
+            margin-top: 5px;
+        }
+        .container {
+            max-width: 1000px;
+            margin: 40px auto;
+            padding: 0 20px;
+        }
+        .hero {
+            background: white;
+            padding: 60px 40px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            margin-bottom: 40px;
+        }
+        .hero h1 {
+            font-size: 42px;
+            color: #004d99;
+            margin-bottom: 15px;
+        }
+        .hero p {
+            font-size: 18px;
+            color: #0066cc;
+            margin-bottom: 30px;
+        }
+        .btn {
+            background-color: #0066cc;
+            color: white;
+            padding: 12px 30px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .btn:hover {
+            background-color: #004d99;
+        }
+        .features {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-bottom: 40px;
+        }
+        .feature-card {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-top: 4px solid #b3d9ff;
+        }
+        .feature-card h3 {
+            color: #0066cc;
+            margin-bottom: 10px;
+        }
+        footer {
+            background-color: #b3d9ff;
+            color: #004d99;
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
-   <div class="1"><h1 class="git">login in the git hub</h1></div>
-   <p>grand father folder</p>
-   <p>in my pc </p>
-   <h1 >element are either shown in the</h1>
+    <header>
+        <div class="logo">🌸 ASHIR FRAGRANCE 🌸</div>
+        <div class="tagline">Premium Perfume Shop - Exquisite Scents for Every Moment</div>
+    </header>
+
+    <div class="container">
+        <div class="hero">
+            <h1>Welcome to Ashir Fragrance</h1>
+            <p>Discover the finest collection of premium perfumes and fragrances</p>
+            <button class="btn">Shop Now</button>
+        </div>
+
+        <div class="features">
+            <div class="feature-card">
+                <h3>Premium Quality</h3>
+                <p>Authentic fragrances from top international brands</p>
+            </div>
+            <div class="feature-card">
+                <h3>Exclusive Collection</h3>
+                <p>Rare and limited edition scents available</p>
+            </div>
+            <div class="feature-card">
+                <h3>Best Prices</h3>
+                <p>Competitive rates with special discounts</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Ashir Fragrance. All rights reserved.</p>
+        <p>Your fragrance, Your identity</p>
+    </footer>
 </body>
 </html>
