--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class=logo><img src="https://img.freepik.com/premium-vector/af-letter-logo-design-creative-modern-f-letters-icon9-3459.jpg?w=2000" alt="brand logo"></div>
     <header>
-        
+        <div class="logo"><img src="https://img.freepik.com/premium-vector/af-letter-logo-design-creative-modern-f-letters-icon-vector_579179-3459.jpg?w=2000" alt="logo"></div>
         <div class="logo">🌸 ASHIR FRAGRANCE 🌸</div>
         <div class="tagline">Premium Perfume Shop - Exquisite Scents for Every Moment</div>
     </header>
